--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "pelicula_1",
+  "name": "peliculas",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start:mysql": "node --watch server-with-mysql.js",
+    "start:mysql": "node --watch server-with-mysql s.js",
     "start:local": "node --watch server-with-local.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +18,7 @@
     "express": "4.18.2",
     "mongodb": "5.7.0",
     "mysql2": "^3.12.0",
+    "pg": "^8.13.1",
     "zod": "3.21.4"
   }
 }
