--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node --watch server-with-mysql.js",
     "start:mysql": "node --watch server-with-mysql.js",
-
+    "start:postgres": "node --watch server-with-postgres.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
